json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,134 @@
 {
  "items": [
   {
+    "id": "Kb3CS2vrSyeSDd3yW0K1zg",
+    "url": "https://remote.co/job/ios-engineer-3/",
+    "title": "iOS Engineer",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:express/nodejs/8",
+      "DBG_TECH1:k/t/w:ios/apple/12",
+      "DBG_TECH1:k/t/w:ios/mobile/12",
+      "DBG_TECH1:k/t/w:machine-learning/bigdata-ml/2",
+      "DBG_TECH1:k/t/w:meteor/nodejs/8",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=20, go=0, nodejs=16, bigdata-ml=2, ruby=0, apple=17, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TECH1/nodejs",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile",
+      "nodejs"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 3, 2018 7:31:45 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>iOS Engineer at <span>Swish Labs</span></h2><div><span><i></i> Remote</span>         | <span> International </span></div><div>            <p><strong>REMOTE</strong></p><p><strong>MOBILE</strong></p><p><strong>ENGINEERING</strong></p><p>The Engineering team at Swish is looking for talented iOS Engineers to create fast, scalable ios products with a focus on the best possible user experiences. You will work closely with a talented team of designers, engineers, and product managers who design, implement and ship mission-critical features. You have prior experience developing high quality iOS apps and are excited about doing that at a company that is transforming the way enterprises run their businesses with a tech-focused, mobile-first mindset. You want to have productive technical discussions with a bias towards analytics and user feedback and contribute to the continuous improvement of our web and mobile experiences.</p><p>We are looking for individuals who are passionate about the latest technologies and can lead the design and development of scalable applications. A successful candidate will bring deep analytical ability, software engineering expertise, and the ability to deliver results within a fast-moving, agile environment.</p><p><strong>Our Stack</strong></p><ul><li>Frontend: Swift</li><li>Backend: Node</li><li>Framework: Express, Next, Meteor</li><li>Datastore: MongoDB, Redis</li><li>Container: Docker</li><li>Hosting: AWS, Heroku</li></ul><p><strong>A Typical Week</strong></p><ul><li>You’ll brainstorm with product managers and designers to conceptualize new features.</li><li>You’ll collaborate with frontend engineers to build new features for a client.</li><li>You’ll learn about new technologies and discuss potential solutions to problems.</li><li>You’ll help our skilled support team triage bugs and troubleshoot production issues.</li><li>You’ll mentor other engineers and deeply review code.</li></ul><p><strong>Requirements</strong></p><p>You’ll be tasked with developing server infrastructures and applying them at scale to our projects. We look for the following attributes in candidates:</p><ul><li>Strong communication skills.</li><li>Work across disciplines with team members from frontend, backend, design, and product.</li><li>Actively participate in product decisions and improve our development workflow.</li><li>3+ years of relevant work experience building iOS apps, ideally using our stack. Experience with building a variety of products with different feature needs.</li><li>Experience with unit and integration testing, continuous integration and deployment workflows.</li><li>Experience with developing REST APIs and integrating third-party APIs.</li></ul><p>In all cases, you should be motivated by a desire to solve the most important problems and obtain unprecedented results and eager to push your methods to their maximal performance.</p><p><strong>Bonus Points</strong></p><ul><li>Degree in STEM field, especially software engineering or computer science related.</li><li>Interested in emerging technology such as machine learning and blockchain.</li><li>Track record of migrating legacy infrastructure to modern stacks.</li><li>Experience in small startup environments helping large enterprises.</li><li>Experience working with a team, especially a distributed team.</li></ul>        </div><div>        <a href='https://jobs.lever.co/swishlabs/e12f2151-74a8-4cd8-af9a-8fe198f8574f' rel='nofollow'>Apply for job</a>    </div>"
+  },
+  {
+    "id": "ILC9vo5YQBaxSZ_uVQOwBQ",
+    "url": "https://remoteok.io/jobs/68335",
+    "title": "Senior IOS Developer",
+    "tags": [
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG_TECH1:k/t/w:ios/apple/8",
+      "DBG_TECH1:k/t/w:ios/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=0, mobile=8, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=8, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 3, 2018 2:22:26 AM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<td><span><h2>Senior iOS Developer</h2></span><br><span><h3>Xapo</h3></span></td><div><div><br>OVERVIEW<br><br><br>* <br><br>Location: Remote (Work from home anywhere in the world)<br><br><br><br><br><br>Xapo is seeking a&nbsp;Developer to join our mobile team. We need someone passionate about iOS&nbsp;and willing to work with first-class engineers around the world.&nbsp;This position can be done from anywhere: from your home, or from a co-working space, just anywhere in the world.<br><br><br>RESPONSIBILITIES<br><br>As an&nbsp;iOS&nbsp;Developer, you will be developing our mobile app that will enable thousands of people to spend their money on their cellphones. The impact of what you will help develop at Xapo will be life-changing for many people.<br><br>We are looking for passionate, enthusiastic and top quality engineers; if you think you have what it takes to help revolutionize the fin-tech future then come to join us!<p>See more jobs at <span>Xapo</span></p></div></div>"
+  },
+  {
+    "id": "kWS7SyOJQpe-oAmEl4PKCg",
+    "url": "https://stackoverflow.com/jobs/198805/senior-ios-developer-xapo?a=14FJ8a3Wc2U8",
+    "title": "Senior IOS developer at Xapo  ",
+    "tags": [
+      "DBG:surround``4W( OR(fulltim,work,talent), anywher)",
+      "DBG:surround``OR(countri, locat) 3W OR(remot,flexibl)",
+      "DBG_TECH1:k/t/w:cocoa/apple/8",
+      "DBG_TECH1:k/t/w:ios/apple/10",
+      "DBG_TECH1:k/t/w:ios/mobile/10",
+      "DBG_TECH1:k/t/w:iphone/apple/2",
+      "DBG_TECH1:k/t/w:iphone/mobile/2",
+      "DBG_TECH1:k/t/w:objective-c/apple/3",
+      "DBG_TECH1:k/t/w:objective-c/c/2",
+      "DBG_TECH1:k/t/w:objective-c/mobile/8",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=2, mobile=28, go=0, nodejs=0, bigdata-ml=0, ruby=0, apple=28, java=0, gamedev=0, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 2, 2018 9:06:09 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2><span>Senior IOS developer</span>                </h2>                    <h3>About this job</h3>                    <div>                            <div>                                    <div>                                        <span>Job type: </span>                                        <span>Full-time</span>                                    </div>                                    <div>                                        <span>Experience level: </span>                                        <span>Senior</span>                                    </div>                                    <div>                                        <span>Role: </span>                                        <span>Mobile Developer</span>                                    </div>                            </div>                            <div>                                    <div>                                        <span>Industry: </span>                                        <span>Banking, Bitcoin, Cryptocurrency</span>                                    </div>                                    <div>                                        <span>Company size: </span>                                        <span>51-200 people</span>                                    </div>                                    <div>                                        <span>Company type: </span>                                        <span>Private</span>                                    </div>                            </div>                    </div>                <div>Company: Xapo | No office location<br></div><h3>Technologies</h3><div></div><div>ios</div><div>iphone</div><div>swift</div><div>objective-c</div><div>cocoa</div>                <h3>Job description</h3>                <div><p><strong>OVERVIEW</strong></p><ul><li><p>Location: Remote (Work from home anywhere in the world)</p></li></ul><p>Xapo is seeking a&nbsp;<span>Developer to join our mobile team. We need someone passionate about iOS</span>&nbsp;and willing to work with first-class engineers around the world.&nbsp;<strong>This position can be done from anywhere</strong>: from your home, or from a co-working space, just anywhere in the world.</p><p><strong>RESPONSIBILITIES</strong></p><p>As an&nbsp;<span>iOS</span>&nbsp;Developer, you will be developing our mobile app that will enable thousands of people to spend their money on their cellphones. The impact of what you will help develop at Xapo will be life-changing for many people.</p><p>We are looking for passionate, enthusiastic and top quality engineers; if you think you have what it takes to help revolutionize the fin-tech future then come to join us!</p>                </div>            <div>        <a href='https://xapo.recruitee.com/o/senior-ios-developer' rel='nofollow'>                        Apply now        </a></div>            <h3>About Xapo</h3>            <div><p>Xapo is a leading bitcoin wallet, and we have a mission to bring bitcoin to the everyday lives of people across the world. Our business is growing fast, and we want to make sure we can keep providing the best quality support to our customers. We’re known for our fast responses to users, positive attitude, and a real desire to find the best working solutions to the people who chose to use Xapo’s products and services.</p>            </div>                            <h3>Benefits</h3>                    <ul>                            <li>                                <span></span>                                <span>Attractive compensation – highly competitive!</span>                            </li>                            <li>                                <span></span>                                <span>Remote job/working from wherever you want!</span>                            </li>                            <li>                                <span></span>                                <span>Flexible working hours</span>                            </li>                            <li>                                <span></span>                                <span>Equity opportunities</span>                            </li>                            <li>                                <span></span>                                <span>Stock Options Grant</span>                            </li>                    </ul>                "
+  },
+  {
     "id": "3GovA2nvSAaVvexRVhkyzQ",
     "url": "https://news.ycombinator.com/item?id=17663699",
     "title": "Gaia GPS | Junior Software Engineer | Focus on iOS | Full-time | www.gaiagps.com",
