json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -718,6 +718,53 @@
     "content": "<td><span><h2>Mobile Engineer iOS</h2></span><br><span><h3>O'reilly Media</h3></span></td><div><div><br>Software Engineer, iOS<br><br>About Your team:<br><br>Our tight-knit and collaborative mobile apps team has a strong user focus and cares a great deal about high-quality software. We value colleagues who are helpful, respectful, communicate openly, and are always willing to do what’s best for our users. We spend time each week listening and responding to customer feedback to make sure we’re delivering useful, timely improvements. The team is broadly distributed across the US and constantly encouraging each other to deliver work that instills pride and fulfillment.&nbsp;&nbsp;<br><br>This person can be based from their home office, located anywhere in North America.<br><br>About the Job:<br><br>We are looking for an experienced and capable iOS developer to help build a new app and grow an existing one. The job is primarily Swift-based, but there are echoes of Objective-C lurking around our GitHub repositories. The Software Engineer will be routinely implementing features, fixing bugs, performing maintenance, and troubleshooting problems within the codebase. Most changes you make will be accompanied by unit tests to confirm their desired behavior. Software Engineers will submit code for review by their peers in the form of pull requests, and will regularly review code by their peers.<br><br>Job Details:<br><br>In a normal week, you might:<br><br><br>* Develop a new feature from a user story using Swift<br><br>* Collaborate with product managers to define clear requirements, deliverables, and milestones<br><br>* Team up with the Android squad to encourage app parity and leverage experience<br><br>* Review a pull request from a coworker and pair on a tricky problem<br><br>* Provide a consistent and reliable estimate to assess risk for a project manager<br><br>* Learn about a new technology and present it to the team<br><br>* Identify opportunities to improve our apps through research and proof of concepts<br><br><br><br><br><br>* Work iteratively with UX designers to create user-centric solutions<br><br><br><br><br><br>* Help QA and troubleshoot a pesky production problem and push up a hotfix<br><br>* Participate in agile process and scrum ceremonies<br><br><br><br><br><br><br>Why you'll love working on our team:<br><br><br>* You'll be working for a company that embraces and pursues new technology<br><br>* You'll be working with a leadership team that trusts and engages its employees<br><br>* We believe in giving developers the tools and hardware that they need to do their job<br><br>* Competitive salary with full benefits (health/dental/vision insurance and 401k)<br><br><br><br><br>About You:<br><br>What we like to see for anyone joining the iOS team:<br><br><br>* Deep knowledge of Swift<br><br>* Deep knowledge of UIKit and Auto Layout – a love/hate relationship with Auto Layout is completely acceptable and, honestly, expected of any adequately experienced candidate :-)<br><br>* Proficiency with Core Data<br><br>* Experience with unit testing<br><br>* Strong drive to experiment, learn and improve your skills<br><br>* Respect for the craft – you write self-documenting code with modern techniques<br><br>* Great written communication skills – we do a lot of work asynchronously in Slack and Google Docs<br><br>* Empathy for our users – a willingness to spend time understanding their needs and difficulties is central to the team<br><br>* The desire to be part of a compact, fun, and hard-working team<br><br><br><br><br>Not required, but for bonus points:<br><br><br>* Formal education in computer science<br><br>* Experience working in a distributed team<br><br>* Contribute to open source projects<br><br>* Knack for benchmarking and optimization<br><br>* Experience with RESTful JSON endpoints and concurrency/multithreading<br><br>* Knowledge of the competitive landscape for learning and self-improvement apps<br><br>* Background in synchronizing information across devices with support for offline functionality<br><br><br><br><br>For EXTRA bonus points:<br><br><br>* Interest in emoji<br><br>* Masterful use of GIFs<br><br>* A deep love of tacos<br><br><br><br><br>Minimum Qualifications:<br><br><br>* 2+ years of professional iOS development (or equivalent) experience<br><br>* 1+ year experience of working in an agile environment<br><br>* Experience in developing, submitting, and releasing mobile apps on the App Store (preferably with at least one still available for download)<br><br>* Ability to work in a self-driven, autonomous fashion<br><br><br><br><br>O'Reilly Media is an equal opportunity employer<p>See more jobs at <span>O'reilly Media</span></p></div></div>"
   },
   {
+    "id": "cldlHdsrQxuszF8LY9lZqQ",
+    "url": "http://berlinstartupjobs.com/engineering/lead-ios-developer-boost-thyroid/",
+    "title": "Lead iOS Developer // BOOST Thyroid",
+    "tags": [
+      "DBG:surround``OR(locat, base, resid) 3W OR(berlin, london, pari)",
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:animation/gamedev/8",
+      "DBG_TECH1:k/t/w:artificial-intelligence/bigdata-ml/2",
+      "DBG_TECH1:k/t/w:boost/c/24",
+      "DBG_TECH1:k/t/w:ios/apple/14",
+      "DBG_TECH1:k/t/w:ios/mobile/14",
+      "DBG_TECH1:k/t/w:swift/apple/5",
+      "DBG_TECH1:k/t/w:swift/mobile/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=0, c=24, mobile=22, go=0, nodejs=0, bigdata-ml=2, ruby=0, apple=19, java=0, gamedev=8, php=0, embedded=0, frontend=0}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/c",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/Europe"
+    ],
+    "tagsNames1": [
+      "European time zones"
+    ],
+    "tagsNames2": [
+      "apple",
+      "c",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Jul 10, 2018 1:58:47 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "<h2>Lead iOS Developer // BOOST Thyroid</h2><div> Company:  BOOST Thyroid <br> <br></div><div> Tags:</div><li>iOS</li><li>mobile development</li><li>iOS developer</li><li>iOS Engineer</li><div>  <p>We are a Berlin-based digital health startup, developing AI for people living with chronic autoimmune conditions. We are backed by the&nbsp;EU Horizon 2020 program&nbsp;as well as several prominent Nordic investors.</p>  <p>Our mission is to inspire a lifetime of healthy habits for autoimmune patients through a digital, scientific, community-focused approach to personal well-being. Our app is currently available for iOS.</p>  <p>The team is composed of scientists and tech people who love working together on challenging problems in health. We are equally proud of what we do and how we do it.</p>  <p>Joining us will give you the opportunity to improve the lives of hundreds of million of people.</p>  <p></p>  <p><strong>WHO ARE YOU?</strong></p>  <p>We are looking for a person that has worked in early stage startups before, and understands the challenges of working in smaller teams with multiple roles and some occasional chaos.</p>  <p>We expect that the engineering team will grow with the company in the next couple of years, so the responsibilities of this role are likely to evolve.</p>  <p>You will work together with the CTO.<br> The job is based in Berlin, Germany.</p>  <p><strong>RESPONSIBILITIES</strong></p>  <ul>   <li>Develop an intuitive and delightful mobile application</li>   <li>Collaborate with our engineering team to define, design, and ship new features</li>   <li>Work with our designers to make sure our application is easy to use and brings value to our community of users</li>   <li>Help grow the engineering team, culture and the development processes to enable us to release often with high quality</li>   <li>Set the initial development structure to make sure we follow best practices</li>  </ul>  <p><strong>QUALIFICATIONS</strong></p>  <ul>   <li>University degree in computer science/engineering or related fields</li>   <li>3+ years of work experience</li>   <li>Proficiency in Swift and iOS Frameworks, like UIKit, Core Location and Core Animation</li>   <li>Fluency in written and spoken English</li>   <li>Permission to work in the EU or a qualified university degree from outside the EU</li>  </ul>  <p><strong>OUR VALUES</strong></p>  <ul>   <li>Our small but mighty team is built upon Nordic work values and a conscious work culture of mutual respect.</li>   <li>We encourage&nbsp;<strong>plurality of thinking</strong>, and value everyone’s opinion, different ideas and cultures. We believe that will help us to improve the lives of autoimmune patients in a better way.</li>   <li>We encourage autonomy, and trust you will do your best work. We will support you to do so.</li>   <li>We are rooted in&nbsp;<strong>Science</strong>, and we believe in&nbsp;<strong>Technical Excellence</strong>&nbsp;and&nbsp;<strong>Quality</strong>.</li>   <li>We believe in being honest, helpful, understanding, and humble.</li>   <li>We have pride and&nbsp;<strong>Integrity</strong>&nbsp;in how we do things and what we produce.</li>   <li>We cherish work-life balance, and as a health tech company we are dedicated to healthy lifestyles.</li>   <li>Our team is partly remote, so communicating well and in a timely manner are paramount.</li>  </ul>  <p>If you think this sounds like a place you want to be and a solution you want to contribute to, we’d love to hear from you.</p>  <p>Let us know you’re interested by emailing us your resume to&nbsp;<strong>jobs@boosthealthapp.com</strong></p> </div><a href='mailto:jobs@boosthealthapp.com' rel='nofollow'>Apply for this position</a>"
+  },
+  {
     "id": "XhcuHR4FRHSgt7eAAuV9gw",
     "url": "https://remoteok.io/jobs/67891",
     "title": "iOS Developer (m/f)",
