json files, md files

--- a/assets/data/TECH1_apple.json
+++ b/assets/data/TECH1_apple.json
@@ -1,6 +1,54 @@
 {
  "items": [
   {
+    "id": "UfH6kJEORmyDIH55LMobxQ",
+    "url": "https://remote.com/jobs/browse/preview/software-tester",
+    "title": "Software Tester",
+    "tags": [
+      "DBG:surround``remot 3N ( OR(employe,develop,engin,team,role,employment,workmat) OR compani OR worldwide)",
+      "DBG_TECH1:k/t/w:android/java/1",
+      "DBG_TECH1:k/t/w:android/mobile/2",
+      "DBG_TECH1:k/t/w:coffeescript/frontend/1",
+      "DBG_TECH1:k/t/w:coffeescript/nodejs/1",
+      "DBG_TECH1:k/t/w:css/frontend/3",
+      "DBG_TECH1:k/t/w:ios/apple/4",
+      "DBG_TECH1:k/t/w:ios/mobile/4",
+      "DBG_TECH1:k/t/w:javascript/frontend/1",
+      "DBG_TECH1:k/t/w:javascript/nodejs/1",
+      "DBG_TECH1:k/t/w:macos/apple/2",
+      "DBG_TECH1:k/t/w:windows/dotnet/8",
+      "DBG_TECH1:techWeightMap:{python=0, other=0, dotnet=8, c=0, mobile=6, go=0, nodejs=2, bigdata-ml=0, ruby=0, apple=6, java=1, gamedev=0, php=0, embedded=0, frontend=5}",
+      "REMOTE1/100",
+      "TECH1/apple",
+      "TECH1/dotnet",
+      "TECH1/mobile",
+      "TITLE1/dev",
+      "TZ/unknown"
+    ],
+    "tagsNames1": [],
+    "tagsNames2": [
+      "apple",
+      "dotnet",
+      "mobile"
+    ],
+    "hiringOrganization": {
+      "name": "UNSET",
+      "sameAs": "UNSET"
+    },
+    "salary": {
+      "currency": "UNSET",
+      "minValue": 0,
+      "maxValue": 0,
+      "info": "",
+      "unit": "UNSET",
+      "isEquity": false
+    },
+    "employmentType": "UNSET",
+    "published": "Aug 7, 2018 12:52:31 PM",
+    "validThrough": "Jan 1, 1970 1:00:00 AM",
+    "content": "JOB TYPE: Full time<br /><br />EXPERIENCE: intermediate<br /><br />COMPANY: eye/o; 50-200 employees; 25-50% remote;<br /><br />SKILLS:<br />• QA<br />• QA Engineering<br />• QA Engineer <br /><br />If interested please apply via our job link: https://eyeo.com/job/?job_id=1264867<br /><br />What you’ll do<br /><br />Join our QA Department and get payed to tell people how to do their job <br /> <br />Do this by testing all things ad blocking, including but not limited to:<br />- Adblock Plus (ABP) for Chrome, Firefox, Opera, Safari & Edge<br />- ABP for iOS & MacOS<br />- ABP for Samsung Internet and additional direct partner integrations<br />- Adblock Browser for Android and Adblock Browser for iOS<br /><br />After your morning coffee, you’ll be expected to...<br /><br />- Perform your own exploratory testing on our products to gain familiarity with the products and learn their similarities and differences<br />- Run checklist tests against our products before releases<br />- Respond to requests from and perform testing for developers and staff<br />- Triage new tickets from our community<br />- Test recently closed issues<br />- Create and maintain useful documentation and notes relating to our products and their testing<br />- Keep up-to-date with the company<br /><br />The more requirements you have, the bigger our smile gets...<br />- Extensive experience with software testing and quality assurance, preferably in a continuously changing environment<br />- Knowledge of source code management tools like Git or Mercurial<br />- Knowledge of basic web technologies (HTML, CSS, JS)<br />- Independent but team-oriented work style<br />- Outgoing proactive involvement within your teams<br />- Excellent communication skills in English<br />- Experience with test automation would be a huge plus, especially not only with website-testing, but with native Windows and mobile apps<br /><br />If you also know the below, we’re pretty much the Joker at this point!<br />- Knowledge of additional scripting languages"
+  },
+  {
     "id": "Kb3CS2vrSyeSDd3yW0K1zg",
     "url": "https://remote.co/job/ios-engineer-3/",
     "title": "iOS Engineer",
